--- a/markdown-renderer/public/manifest.json
+++ b/markdown-renderer/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jujuwireless",
+  "name": "Jujuwireless dot com",
   "icons": [
     {
       "src": "favicon.ico",
